# Minivim

./: README.md
attachment/: ncurses_demo.cpp
project/: .demo.py.swp  CMakeLists.txt
project/src/: ncurses_demo.cpp
